# mp_ar

./: README.md  pyproject.toml
app/: doctor_strange_shield.py  hand_landmarker_demo.py  hand_landmarker_test.py
